[metadata]
name = pycephes
version = 0.0.2
author = Jon Cavallie Mester
author_email = jonmester3@gmail.com
classifiers =
    Development Status :: 1 - Planning Copy
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Numba-friendly Python bindings to Cephes math library
download_url = https://github.com/limix/ncephes
keywords = cephes, netlib, math, numba, jit
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Jon Cavallie Mester
platforms = Windows, MacOS, Linux
maintainer_email = jonmester3@gmail.com
url = https://github.com/jonmest/pycephes

[options]
install_requires =
    numpy >= 1.21.0
    cffi >= 1.15.0
packages = find:
cffi_modules=["build_hcephes.py:ffibuilder"]